# actix_hello_world

./: Cargo.toml  data.json
src/: handler.rs  main.rs
src/handler/: data.rs
static/: footer.html  form.html  header.html
templates/: base.html  form.html  home.html  index.html  show.html
